--- a/index.ipynb
+++ b/index.ipynb
@@ -60,6 +60,7 @@
     "def number_of_destinations():\n",
     "    number_of_destinations = len(travel_destinations)\n",
     "    return number_of_destinations\n",
+    "travel_destinations\n",
     "    "
    ]
   },
