--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "def number_of_destinations():\n",
     "    number_of_destinations = len(travel_destinations)\n",
     "    return number_of_destinations\n",
-    "travel_destinations\n",
+    "travel_destinations.append('Croatia')\n",
     "    "
    ]
   },
