automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,30 +52,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def number_of_destinations():\n",
-    "    number_of_destinations = len(travel_destinations)\n",
-    "    return number_of_destinations\n",
-    "travel_destinations.append('Croatia')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "<function list.pop>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def number_of_destinations():\n",
+    "    number_of_destinations = len(travel_destinations)\n",
+    "    return number_of_destinations\n",
+    "travel_destinations.pop\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
