--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel_destinations(-1)"
+    "    travel_destinations(-1)\n",
+    "    return"
    ]
   },
   {
