--- a/index.ipynb
+++ b/index.ipynb
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel_destinations(-1)\n",
-    "    return"
+    "    next_up = travel_destinations(-1)\n",
+    "    return next_up"
    ]
   },
   {
