automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
     "    next_up = travel_destinations(-1)\n",
-    "    return next_up"
+    "    return next_up\n"
    ]
   },
   {
