automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,13 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.next_up()>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def next_up():\n",
     "    next_up = travel_destinations(-1)\n",
-    "    return next_up\n"
+    "    return next_up\n",
+    "next_up"
    ]
   },
   {
