--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +100,14 @@
        "<function __main__.next_up()>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def next_up():\n",
-    "    next_up = travel_destinations(0\n",
+    "    next_up = travel_destinations[0]\n",
     "    return next_up\n",
     "next_up"
    ]
