--- a/index.ipynb
+++ b/index.ipynb
@@ -91,22 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-24-d1c983f6e77b>, line 2)",
+     "evalue": "can't assign to function call (<ipython-input-25-9ce50b7f4cbb>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-d1c983f6e77b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    next_up() = travel_destinations[0]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-9ce50b7f4cbb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    next_up() = travel_destinations(0)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
    "source": [
     "def next_up():\n",
-    "    next_up() = travel_destinations[0\n",
-    "    return next_up\n",
+    "    next_up = travel_destinations(0)\n",
+    "    return next_up()\n",
     "next_up"
    ]
   },
