--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,8 @@
    "source": [
     "def next_up():\n",
     "    next_up = travel_destinations(0)\n",
-    "    return next_up"
+    "    return next_up\n",
+    "print(tra)"
    ]
   },
   {
