automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,14 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['argentina', 'mexico', 'italy']\n"
+     ]
+    }
+   ],
    "source": [
     "def next_up():\n",
     "    next_up = travel_destinations(0)\n",
     "    return next_up\n",
-    "print(tra)"
+    "print(travel_destinations)"
    ]
   },
   {
