--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    favorite_destination = travel_destination[-1]"
+    "    favorite_destination = travel_destination[-1]\n",
+    "    return favorite_des"
    ]
   },
   {
