--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countriestravel_destinations.title()"
+    "    capitalize_countries = travel_destinations.title()\n",
+    "    return capitalize_"
    ]
   },
   {
