automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,9 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = travel_destinations.capitalize()\n",
-    "    return capitalize_countries"
+    "    return capitalize_countries\n",
+    "\n",
+    "print travel_des"
    ]
   },
   {
