automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,16 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = travel_destinations.capitalize()\n",
     "    return capitalize_countries\n",
     "\n",
-    "print travel_des"
+    "print(travel_destinations)"
    ]
   },
   {
