automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
     "    capitalize_countries = travel_destinations.capitalize()\n",
     "    return capitalize_countries\n",
     "\n",
-    "print(travel_destinations)"
+    "capitaliz"
    ]
   },
   {
