automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,15 +220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<function __main__.capitalize_countries()>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -237,7 +240,7 @@
     "    capitalize_countries = travel_destinations.capitalize()\n",
     "    return capitalize_countries\n",
     "\n",
-    "capitaliz"
+    "capitalize_countries"
    ]
   },
   {
