--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = print(travel_destinations.title())\n",
+    "    capitalize_countries = print(travel_destinations.title()]\n",
     "    return capitalize_countries"
    ]
   },
