--- a/index.ipynb
+++ b/index.ipynb
@@ -220,13 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = travel_destinations.capitalize()\n",
+    "    capitalize_countries = travel_destinations\n",
     "    return capitalize_countries"
    ]
   },
