automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,8 +226,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized\n",
-    "    for destinations in travel_destinations\n",
+    "    capitalized_countries[]    for destinations in travel_destinations\n",
     "    \n",
     "    capitalize_countries = travel_destinations.\n",
     "    return capitalize_countries"
