automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries[]:\n",
     "        for destinations in travel_destinations\n",
-    "        capitalized_countries.append()\n",
+    "        capitalized_countries.append(destinations.title())\n",
     "    \n",
     "    capitalize_countries = travel_destinations.\n",
     "    return capitalize_countries"
