automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,15 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-86-c37d4f8a3cb8>, line 4)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-87-f0acb0475402>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-86-c37d4f8a3cb8>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for destinations in travel_destinations\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-87-f0acb0475402>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    capitalized_countries[]\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
