automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'japan']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
